--- a/docs/css/常用技巧..md
+++ b/docs/css/常用技巧..md
@@ -6,3 +6,30 @@ h2 {
   visibility:hidden;
 }
 ```
+
+## 清除浮动
+
+```html
+<div class="container clearfix">
+  <div class="floatItem"></div>
+</div>
+```
+
+通过CSS伪元素在容器的内部元素之后添加一个看不见的空格“\20”或点“.”，并设置clear属性清除浮动。
+
+zoom: 1 支持 IE6 和 IE7.
+
+```css
+.clearfix:after {
+  content: '\20';
+  display: block;
+  height:　0;
+  clear:both;
+}
+.clearfix {
+  zoom: 1;
+}
+```
+
+## 文字换行
+
