--- a/docs/css/布局.md
+++ b/docs/css/布局.md
@@ -333,7 +333,7 @@
 
 圣杯布局主要是实现中间主题部分中的左右定宽+中间自适应的布局效果
 
-![image-20200225203505611](image-20200225203505611.png)
+![image-20200225203505611](./image-20200225203505611.png)
 
 ## 双飞翼布局
 
@@ -394,7 +394,7 @@
 
 公式：间距+容器宽度=(间距+列宽度) * N
 
-![image-20200225213847977](image-20200225213847977.png)
+![image-20200225213847977](./image-20200225213847977.png)
 
 HTML 代码的变化
 
@@ -511,7 +511,7 @@ columns属性
 
 全屏布局就是指 HTML页面铺满整个浏览器窗口，并且没有滚动条。而且还可以跟随浏览器的大小变化而变化
 
-![image-20200225225923628](image-20200225225923628.png)
+![image-20200225225923628](./image-20200225225923628.png)
 
 ## 总结
 
