--- a/docs/css/常用技巧.md
+++ b/docs/css/常用技巧.md
@@ -76,3 +76,36 @@ html {
 **方案2**
 
 非全站变灰我们可以将需要使用filter的元素单独加上 。
+
+```html
+<html>
+    <body>
+        <div class="fixed gray-filter"></div>
+    </body>
+</html>
+
+<style>
+.fixed {
+    position: fixed;
+    top: 100px;
+    left: 100px;
+    height: 100px;
+    width: 100px;
+    background-color: blue;
+}
+.gray-filter {
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+    -webkit-filter: grayscale(1);
+}
+</style>
+```
+
+**参考**
+
+ https://juejin.im/post/5e86e221e51d4546ce27b99c 
