css logo悬浮动画切换

--- a/docs/css/常用技巧.md
+++ b/docs/css/常用技巧.md
@@ -109,3 +109,68 @@ html {
 **参考**
 
  https://juejin.im/post/5e86e221e51d4546ce27b99c 
+
+## logo鼠标悬浮切换
+
+知识点：
+
+- 一个a标签放两张图片：利用伪类
+
+- 鼠标悬浮图标动态切换：transition
+
+效果：
+
+  <logo></logo>
+
+代码：
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    .header-logo {
+      display: inline-block;
+      width: 55px;
+      height: 55px;
+      background-color: #ff6600;
+    }
+    .header-logo a {
+      display: inline-block;
+      width: 110px;
+      height: 55px;
+    }
+    .header-logo a:before {
+      content: ' ';
+      display: inline-block;
+      width: 55px;
+      height: 55px;
+      background: url('./imgs/mi-logo.png') no-repeat center;
+      background-size: 55px;
+      transition: margin 0.2s;
+    }
+    .header-logo a:after {
+      content: ' ';
+      display: inline-block;
+      width: 55px;
+      height: 55px;
+      background: url('./imgs/mi-home.png') no-repeat center;
+      background-size: 55px;
+    }
+    .header-logo a:hover:before {
+      margin-left: -55px;
+      transition: margin 0.2s;
+    }
+
+  </style>
+</head>
+<body>
+  <div class="header-logo">
+    <a href="javascript:;"></a>
+  </div>
+</body>
+</html>
+```
+
