--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -5,8 +5,8 @@
   - 环境搭建
 - Vue响应式原理
   - 初始化数据
-  - 递归属性劫持
-  - 数组方法的劫持
+  - 递归属性劫持（对象）
+  - 数组的劫持
   - 数据代理
 - 模板编译
   - 解析标签和内容
@@ -108,4 +108,193 @@ export default Vue
 ## Vue响应式原理
 
 ### 初始化数据
+
+- 声明Vue
+- 初始化状态
+- 处理状态中的data初始化
+- 对data进行响应式处理
+
+**声明Vue**
+
+声明一个Vue构造函数，src/index.js
+
+```js
+// Vue的核心代码 只是Vue的一个声明
+import {initMixin} from './init'
+function Vue(options){
+    // 进行Vue的初始化操作
+    this._init(options)
+}
+// 通过引入文件的方式 给Vue原型上添加方法
+initMixin(Vue) // 给Vue原型上添加一个_init方法
+
+export default Vue
+```
+
+**初始化状态**
+
+将初始化工作拆分到单独文件中，src/init.js
+
+引入文件的方式，给Vue原型添加方法，达到拆分文件的目的。
+
+```js
+import {initState} from './state'
+// 在原型上添加一个init方法
+export function initMixin(Vue) {
+    Vue.prototype._init = function (options) {
+        // 数据劫持
+        const vm = this // vue中使用 this.$options 指代的就是用户传递的属性
+        vm.$options = options
+
+        // 初始化状态
+        initState(vm) // 分割代码
+    }
+}
+```
+
+**处理状态中的data初始化**
+
+vue的数据来源 属性 方法 数据 计算属性 watch，这里先处理data，src/state.js
+
+```js
+import {observe} from './observer/index'
+export function initState(vm) {
+    const opts = vm.$options
+    // vue的数据来源 属性 方法 数据 计算属性 watch
+    if (opts.props) {
+        initProps(vm)
+    }
+    if (opts.methods) {
+        initMethod(vm)
+    }
+    if (opts.data) {
+        initData(vm)
+    }
+    if (opts.computed) {
+        initComputed(vm)
+    }
+    if (opts.watch) {
+        initWatch(vm)
+    }
+}
+function initProps() {}
+function initMethod() {}
+function initData(vm) {
+    // 数据初始化工作
+    let data = vm.$options.data // 用户传递的data
+    data = vm._data = typeof data === 'function' ? data.call(vm) : data
+    // 对象劫持 用户改变了数据 通知 => 刷新页面
+    // MVVM模式 数据变化可以驱动视图变化
+
+    // Object.defineProperty() 给属性增加get方法和set方法
+    observe(data) // 响应式原理
+    
+}
+function initComputed() {}
+function initWatch() { }
+```
+
+**对data进行响应式处理**
+
+通过Object.defineProperty() (es5方法)给属性增加get方法和set方法,进行对象劫持，用户改变了数据 通知 => 刷新页面（MVVM模式 数据变化可以驱动视图变化）
+
+>  Object.defineProperty 不能兼容ie8及以下 vue2无法兼容ie8版本
+
+```js
+export function observe(data) {
+ 
+}
+```
+
+### 递归属性劫持（对象）
+
+对对象的属性进行劫持
+
+- 1.定义Observer类，观测数据
+- 2.defineReactive定义响应式数据
+- 3.如果对象属性值还是对象则递归深度监测
+- 4.当对data进行赋值操作，且值是对象时，也需要观测数据
+
+```js
+import {
+    isObject
+} from '../util/index'
+
+class Observer { // 1
+    constructor (value) {
+        // vue 如果数据的层次过多 需要递归的解析对象中的属性，依次增加set和get方法
+        this.walk(value)
+    }
+    walk(data){
+        let keys = Object.keys(data)
+        keys.forEach(key => {
+            defineReactive(data, key, data[key]) // 定义响应式数据
+        })
+    }
+}
+
+function defineReactive(data, key, value) { // 2
+    observe(value) // 3 递归实现深度监测（数据越深，递归越多，从而导致性能浪费，所以写代码时，层级不要太多）
+    Object.defineProperty(data,key,{
+        get(){ // 获取值的时候做一些操作
+            return value
+        },
+        set(newValue){ // 设置值时也可以做一些操作
+            if (newValue === value) return
+            observe(newValue) // 4 继续劫持用户设置的值，因为有可能用户设置的值是一个对象
+            value = newValue
+        }
+    })
+}
+
+export function observe(data) {
+    let isObj = isObject(data)
+    if (!isObj) {
+        return
+    }
+    return new Observer(data) // 用来观测数据
+}
+```
+
+引入Vue，进行数据操作
+
+```html
+<script src="./dist/umd/vue.js"></script>
+    <script>
+        let vm = new Vue({
+            el: '#app',
+            data() {
+                return {
+                    name: 'zhangsan',
+                    age: 18,
+                    address: {
+                        number: 0,
+                        name: 'xxx'
+                    }
+                }
+            },
+            computed() {},
+            watch() {}
+        })
+        vm._data.name = 'lisi' // 修改数据
+        console.log(vm._data)
+
+        vm._data.address = {a:1} // 修改数据，且值是对象
+        console.log(vm._data)
+    </script>
+```
+
+工具函数，src/util.js
+
+```js
+/**
+ * 
+ * @param {*} data 当前数据是不是对象
+ */
+export function isObject(data) {
+    return typeof data === 'object' && data !== null
+}
+```
+
+### 数组的劫持
 
