--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -298,3 +298,57 @@ export function isObject(data) {
 
 ### 数组的劫持
 
+- 对数组进行单独处理
+- 不对索引进行观测，会导致性能问题
+- 劫持数组7个会改变自身的方法
+- 给每一个监控过的对象都增加一个`__ob__`属性，方便在劫持方法中，对新增属性进行观测
+
+对数组进行单独处理，src/observer/index.js
+
+
+
+```js
+import {arrayMethods} from './array.js'
+import {
+    isObject, def
+} from '../util/index'
+
+class Observer {
+    constructor(value) {
+        value.__ob__ = this // 给每一个监控过的对象都增加一个__ob__属性
+        // value.__ob__ = this // 给每一个监控过的对象都增加一个__ob__属性
+        def(value, '__ob__', this)
+        if (Array.isArray(value)) {
+            // 对数组监控
+            // 如果是数组的话，并不会对索引进行观测 因为会导致性能问题
+            // 前端开发中很少 去操作索引，一般会使用 push、pop、shift、unshift...
+            value.__proto__ = arrayMethods
+            // 如果数组里放的是对象再监控
+            this.observerArray(value)
+        } else {
+            this.walk(value)
+        }
+    }
+    observerArray(value) {
+        for (let i = 0; i < value.length; i++) {
+            observe(value[i])
+        }
+    }
+    walk(data) {
+			// ...
+    }
+}
+
+function defineReactive(data, key, value) {
+
+}
+
+export function observe(data) {
+    let isObj = isObject(data)
+    if (!isObj) {
+        return
+    }
+    return new Observer(data) // 用来观测数据
+}
+```
+
