--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -105,6 +105,29 @@ function Vue(options){
 export default Vue
 ```
 
+编写index.html模板，index.html
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script src="./dist/umd/vue.js"></script>
+    <script>
+        let vm = new Vue({
+            el: '#app'
+        })
+    </script>
+</body>
+</html>
+```
+
+
+
 ## Vue响应式原理
 
 ### 初始化数据
@@ -301,11 +324,9 @@ export function isObject(data) {
 - 对数组进行单独处理
 - 不对索引进行观测，会导致性能问题
 - 劫持数组7个会改变自身的方法
-- 给每一个监控过的对象都增加一个`__ob__`属性，方便在劫持方法中，对新增属性进行观测
+- 给每一个监控过的对象都增加一个`__ob__`属性，值为Observer实例，方便在劫持方法中，对新增属性进行观测
 
 对数组进行单独处理，src/observer/index.js
-
-
 
 ```js
 import {arrayMethods} from './array.js'
