--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -239,6 +239,7 @@ export function observe(data) {
 - 4.当对data进行赋值操作，且值是对象时，也需要观测数据
 
 ```js
+// src/observer/index.js
 import {
     isObject
 } from '../util/index'
@@ -270,7 +271,7 @@ function defineReactive(data, key, value) { // 2
     })
 }
 
-export function observe(data) {
+  export function observe(data) {
     let isObj = isObject(data)
     if (!isObj) {
         return
@@ -321,55 +322,129 @@ export function isObject(data) {
 
 ### 数组的劫持
 
-- 对数组进行单独处理
-- 不对索引进行观测，会导致性能问题
-- 劫持数组7个会改变自身的方法
+- 数组项为对象时进行劫持，避免对索引进行观测，以免导致性能问题
+- 劫持数组7个会改变自身的方法，当添加的是对象时进行劫持。
 - 给每一个监控过的对象都增加一个`__ob__`属性，值为Observer实例，方便在劫持方法中，对新增属性进行观测
 
-对数组进行单独处理，src/observer/index.js
+数组项为对象时进行劫持，避免对索引进行观测，以免导致性能问题，src/observer/index.js
 
 ```js
-import {arrayMethods} from './array.js'
 import {
-    isObject, def
+    arrayMethods
+
+} from './array.js'
+import {
+    isObject,
+    def
 } from '../util/index'
 
 class Observer {
     constructor(value) {
-        value.__ob__ = this // 给每一个监控过的对象都增加一个__ob__属性
-        // value.__ob__ = this // 给每一个监控过的对象都增加一个__ob__属性
-        def(value, '__ob__', this)
+        // value.__ob__ = this // 我给每一个监控过的对象都增加一个__ob__属性，由于__ob__也是对象所以会递归观测，导致observerArray重复调用，造成死循环
+        def(value, '__ob__', this) // 3
+
         if (Array.isArray(value)) {
-            // 对数组监控
-            // 如果是数组的话，并不会对索引进行观测 因为会导致性能问题
-            // 前端开发中很少 去操作索引，一般会使用 push、pop、shift、unshift...
+            // 如果数组的话并不会对索引进行观测 因为会导致性能问题
+            // 前端开发很少会操作索引 一般会使用 push shift unshift...
+
+            // 重写数组方法
             value.__proto__ = arrayMethods
-            // 如果数组里放的是对象再监控
-            this.observerArray(value)
+            // 如果数组里放的是对象再进行监控
+            this.observerArray(value) // 1
         } else {
             this.walk(value)
         }
     }
     observerArray(value) {
-        for (let i = 0; i < value.length; i++) {
-            observe(value[i])
-        }
+        value.forEach(item => {
+            observe(item)
+        })
     }
     walk(data) {
-			// ...
+        let keys = Object.keys(data)
+        keys.forEach(key => {
+            defineReactive(data, key, data[key])
+        })
     }
 }
 
 function defineReactive(data, key, value) {
+    observe(value)
+    Object.defineProperty(data, key, {
+        get() {
+            return value
+        },
+        set(newValue) {
+            if (newValue === value) return
+            observe(newValue)
+            value = newValue
+        }
+    })
 
 }
 
 export function observe(data) {
     let isObj = isObject(data)
-    if (!isObj) {
-        return
+    if (!isObj) return
+
+    return new Observer(data)
+
+}
+```
+
+劫持数组7个会改变自身的方法，当添加的是对象时进行劫持。src/observer/array.js
+
+给每一个监控过的对象都增加一个`__ob__`属性，值为Observer实例，方便在劫持方法中，对新增属性进行观测
+
+```js
+// 重写数组的方法 push shift unshift pop reverse sort splice 会导致数组本身发生变化
+let oldArrayMethods = Array.prototype
+// value.__proto__ = arrayMethods // 劫持的方法会去arrayMethods找（原型链查找机制，向上查找，先找重写的，重写的没有继续向上查找）
+// arrayMethods.__proto__ = oldArrayMethods // slice 会去oldArrayMethods找
+export let arrayMethods = Object.create(oldArrayMethods)
+
+const methods = [
+    'push',
+    'shift',
+    'unshift',
+    'pop',
+    'sort',
+    'splice',
+    'reverse'
+]
+
+methods.forEach(method => { // 2
+    arrayMethods[method] = function (...args) {
+        console.log('用户调用了push方法') // AOP 切片编程
+        const result = oldArrayMethods[method].apply(this, args) // 调用原生的数组方法
+        // push unshift 添加的元素可能还是一个对象
+        let inserted // 当前用户插入的元素
+        let ob = this.__ob__
+        switch (method) {
+            case 'push':
+            case 'unshift':
+                inserted = args
+                break;
+            case 'splice': // 3个 新增的属性 splice 有删除 新增的功能 arr.splice(0, 1, {name: 1})
+                inserted = args.slice(2)
+            default:
+                break;
+        }
+        if (inserted) ob.observerArray(inserted) // 3 将新增属性继续观测
+        return result
     }
-    return new Observer(data) // 用来观测数据
+})
+```
+
+工具方法，src/util/index.js
+
+```js
+export function def(data, key, value) {
+    Object.defineProperty(data, key, {
+        enumerable: false,
+        configurable: false,
+        value
+    })
 }
 ```
 
