--- a/docs/数据结构与算法/1.算法的基础知识.md
+++ b/docs/数据结构与算法/1.算法的基础知识.md
@@ -130,9 +130,30 @@ ENIAC => 8086 => 大数据集群 => 量子计算机
 
 ![image-20201122222716819](../../img/image-20201122222716819.png)
 
-指令
+### 指令
 
 ![image-20201122223813992](../../img/image-20201122223813992.png)
 
-CPU指令集
+### CPU指令集
 
+![image-20201125181636708](../../img/image-20201125181636708.png)
+
+用于计算的指令，特征是只涉及alu-寄存器之间的关系，像sin这种正弦计算一般是由硬件电路实现的，不消耗时间。MUL把两个寄存器中的数据放到另一个寄存器中。单个寄存器的数据加减。
+
+ram-寄存器是操作内存的。LOAD 把内存的数据加载到寄存器中，STORE是再存回去，MOV把内存地址中的数据移到另一个内存地址。
+
+控制程序流程，操作pc指针，相当于if else while等
+
+这些指令构成了我们平常写的程序。我们写的程序最终会转化成指令(机器码)进行执行。
+
+### 启动
+
+开机的过程：数据从 硬盘=>内存=>cpu缓存=>cpu核心 进行alu计算
+
+![image-20201125182815067](../../img/image-20201125182815067.png)
+
+### 5000 * 0.2 = ?
+
+5000*0.2的执行过程
+
+![image-20201125183009435](../../img/image-20201125183009435.png)
