--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -448,3 +448,142 @@ export function def(data, key, value) {
 }
 ```
 
+## 模板编译
+
+```html
+<div id="app">
+    <p>{{name}}</p>
+    <span>{{age}}</span>
+</div>
+
+render(){
+    return _c('div', {id: 'app'}, _c('p', undefined, _v(_s(name))),_c('span', undefined, _v(_s(age))))
+}
+```
+
+### 解析标签和内容
+
+对数据进行响应式处理之后，接下来进行模板编译（顺序：默认会先查找有没有render方法，没有render会采用tempalte，template也没有就用el中的内容），src/init.js
+
+```js
+import {initState} from './state'
+
+import {compileToFunction} from './compiler/index.js'
+export function initMixin(Vue) {
+    Vue.prototype._init = function (options) {
+        const vm = this
+        vm.$options = options
+
+        initState(vm)
+
+        // 如果用户传入了el属性 需要将页面渲染出来
+        // 如果用户传入了el 就要实现挂载流程
+        if (vm.$options.el) {
+            vm.$mount(vm.$options.el)
+        }
+    }
+    Vue.prototype.$mount = function (el) {
+        const vm = this
+        const options = vm.$options
+        el = document.querySelector(el)
+
+        // 默认会先查找有没有render方法，没有render会采用tempalte，template也没有就用el中的内容
+
+        if (!options.render) {
+            // 对模板进行编译
+            let template = options.template // 取出模板
+            if (!template && el) {
+                template = el.outerHTML // 兼容性问题，可以创建一个div，取innerHTML
+            }
+            const render = compileToFunction(template)
+            options.render = render
+            // 我们需要将template 转化成 render方法
+        }
+    }
+}
+```
+
+compileToFunction，将模板转化成render函数，src/complier/index.js
+
+转换顺序：tempalte=>ast语法树=>render函数
+
+```js
+// ast语法树 是用对象来描述原生语法的
+// 虚拟dom 是用对象来描述dom节点的
+// ?: 匹配不捕获
+// arguments[0] = 匹配到的标签 arguments[1] 匹配到的标签名字
+const ncname = `[a-zA-Z_][\\-\\.0-9_a-zA-Z]*` // abc-aaa
+const qnameCapture = `((?:${ncname}\\:)?${ncname})` // <aaa:bbb>
+const startTagOpen = new RegExp(`^<${qnameCapture}`) // 标签开头的正则 捕获的内容是标签名
+const endTag = new RegExp(`^<\\/${qnameCapture}[^>]*>`) // 匹配标签结尾的 </div>
+const attribute = /^\s*([^\s"'<>\/=]+)(?:\s*(=)\s*(?:"([^"]*)"+|'([^']*)'+|([^\s"'=<>`]+)))?/ // 匹配属性
+const startTagClose = /^\s*(\/?)>/ // 匹配标签结束的 <div> <div />
+const defaultTagRE = /\{\{((?:.|\r?\n)+?)\}\}/g
+
+export function compileToFunction(template) {
+    console.log(template)
+    return function render() {
+
+    }
+}
+```
+
+ast语法树 是用对象来描述原生语法的 虚拟dom 是用对象来描述dom节点的
+
+解析标签和内容，就是讲语法转化为ast语法树
+
+```html
+<div id="app">
+    <p>hello</p>
+</div>
+描述上面语法的 ast语法树
+let root = {
+    tag: 'div',
+    attrs: [{name: 'id', value: 'app'}],
+    parent: null,
+    type: 1,
+    children: [{
+        tag: 'p',
+        attrs: [],
+        parent: root,
+        type: 1,
+        children: [
+            {
+                text: 'hello',
+                type: 3
+            }
+        ]
+    }]
+}
+```
+
+
+
+```js
+// ?: 匹配不捕获
+// arguments[0] = 匹配到的标签 arguments[1] 匹配到的标签名字
+const ncname = `[a-zA-Z_][\\-\\.0-9_a-zA-Z]*` // abc-aaa
+const qnameCapture = `((?:${ncname}\\:)?${ncname})` // <aaa:bbb>
+const startTagOpen = new RegExp(`^<${qnameCapture}`) // 标签开头的正则 捕获的内容是标签名
+
+let r = '<a:b>'.match(startTagOpen)
+console.log(r) // [ '<a:b', 'a:b', index: 0, input: '<a:b>', groups: undefined ]
+```
+
+```js
+const attribute = /^\s*([^\s"'<>\/=]+)(?:\s*(=)\s*(?:"([^"]*)"+|'([^']*)'+|([^\s"'=<>`]+)))?/ // 匹配属性 ` aa="123"` ` aa='123'` `  aa=123`
+
+console.log((` aa="123" `).match(attribute))
+// [
+//     ' aa="123"',
+//     'aa',
+//     '=',
+//     '123',
+//     undefined,
+//     undefined,
+//     index: 0,
+//     input: ' aa="123" ',
+//     groups: undefined
+//   ]
+```
+
