--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -448,6 +448,76 @@ export function def(data, key, value) {
 }
 ```
 
+### 数据代理
+
+让用户通过vm.name可以访问到vm._data.name
+
+```js
+import {observe} from './observer/index'
+import {proxy} from './util/index'
+export function initState(vm) {
+    const opts = vm.$options
+    if (opts.props) {
+        initProps(vm)
+    }
+    if (opts.methods) {
+        initMethod(vm)
+    }
+    if (opts.data) {
+        initData(vm)
+    }
+    if (opts.computed) {
+        initComputed(vm)
+    }
+    if (opts.watch) {
+        initWatch(vm)
+    }
+}
+
+function initProps() {
+
+}
+
+function initMethod() {
+
+}
+
+function initData(vm) {
+    let data = vm.$options.data
+    data = vm._data = typeof data === 'function' ? data.call(vm) : data
+    for (let key in data) {
+        proxy(vm, '_data', key) // 代理 vm._data
+    }
+    observe(data)
+}
+
+function initComputed() {
+
+}
+
+function initWatch() {
+
+}
+```
+
+抽离代理方法，src/util/index.js
+
+```js
+// 取值时实现代理效果
+export function proxy(vm, source, key) {
+    Object.defineProperty(vm, key, {
+        get() {
+            return vm[source][key]
+        },
+        set(newValue) {
+            vm[source][key] = newValue
+        }
+    })
+}
+```
+
+
+
 ## 模板编译
 
 ```html
@@ -847,4 +917,168 @@ export function compileToFunction(template) {
     }
 }
 ```
+
+### 生成render函数
+
+需要将ast语法树生成最终的render函数 就是字符串拼接（模板引擎），src/complier.index.js
+
+1.处理标签名 2.处理属性
+
+```js
+
+import {parseHTML} from './parser-html'
+
+function genProps(attrs) { // 处理属性 拼接成属性的字符串
+    // [{name: 'id',value: 'app'},...]
+    let str = ''
+    for (let i = 0; i < attrs.length; i++) {
+        let attr = attrs[i];
+        if (attr.name === 'style') {
+            // style="color: red;fontSize:14px" => {style:{color: 'red'}}
+            let obj = {}
+            attr.value.split(';').forEach(item => {
+                let [key, value] = item.split(':')
+                obj[key] = value
+            })
+            attr.value = obj
+        }
+        str += `${attr.name}:${JSON.stringify(attr.value)},`
+    }
+    return `{${str.slice(0, -1)}}`
+}
+function generate(el) {
+    let code = `_c("${el.tag}"),${
+        el.attrs.length ? genProps(el.attrs) : 'undefined'
+    }
+
+    `
+    return code
+}
+
+export function compileToFunction(template) {
+    // 1) 解析html字符串 将html字符串 => ast 语法树
+    let root = parseHTML(template)
+    // 需要将ast语法树生成最终的render函数 就是字符串拼接（模板引擎）
+    let code = generate(root)
+
+
+    // 核心思路：将模板转化成下面的字符串
+    // <div id="app"><p>hello {{name}}</p> hello</div>
+    // 将ast树 再次转化成js的语法
+    // _c("div",{id:app},_c("p",undefined,_v('hello' + _s(name))),_v('hello'))
+    return function render() {
+
+    }
+}
+```
+
+## 创建渲染watcher
+
+### 初始化渲染Watcher
+
+将template转化成render方法后，开始渲染和挂载当前组件
+
+**初始化渲染流程**
+
+使用mountComponent函数用于渲染和挂载组件，src/init.js
+
+```js
+import {initState} from './state'
+
+import {mountComponent} from './lifecycle'
+
+import {compileToFunction} from './compiler/index.js'
+export function initMixin(Vue) {
+    Vue.prototype._init = function (options) {
+        const vm = this
+        vm.$options = options
+      
+        initState(vm)
+
+        if (vm.$options.el) {
+            vm.$mount(vm.$options.el)
+        }
+    }
+    Vue.prototype.$mount = function (el) {
+        const vm = this
+        const options = vm.$options
+        el = document.querySelector(el)
+
+        if (!options.render) {
+            let template = options.template
+            if (!template && el) {
+                template = el.outerHTML
+            }
+            const render = compileToFunction(template)
+            options.render = render
+        }
+        // options.render
+        // 渲染当前组件 挂载这个组件
+        mountComponent(vm, el)
+    }
+}
+```
+
+定义mountComponent函数，src/liefcycle.js
+
+- Watcher 就是用来渲染的，每次new Watcher会执行updateComponent方法渲染组件
+- vm.`_render `通过解析的render方法 渲染出虚拟dom
+- vm.`_update` 通过虚拟dom 创建真实的dom
+
+```js
+export function mountComponent(vm, el) {
+    const options = vm.$options // render
+    vm.$el = el // 真实的dom元素
+  
+    // 渲染页面
+    let updateComponent = () => { // 无论是渲染还是更新都会调用此方法
+        // 返回的是虚拟dom
+        vm._update(vm.render())
+    }
+    // 渲染watcher 每个组件都有一个watcher
+    new Watcher(vm, updateComponent, ()=>{}, true) // true 表示它是一个渲染watcher
+}
+```
+
+将 vm.`_render`和vm.`_update`扩展到Vue原型上
+
+定义vm._render，src/render.js
+
+```js
+export function renderMixin (Vue) {
+    Vue.prototype._render = function () {
+        
+    }
+}
+```
+
+定义vm.`_update`，src/liefcycle.js
+
+```js
+export function liefcycleMixin(Vue) {
+    Vue.prototype._update = function () {
+        
+    }
+}
+```
+
+挂载到Vue原型上，src/index.js
+
+```js
+import {initMixin} from './init'
+import {renderMixin} from './render'
+import {liefcycleMixin} from './lifecycle'
+
+function Vue(options) {
+    this._init(options)
+}
+
+initMixin(Vue)
+renderMixin(Vue) // 给Vue原型上添加一个_render方法
+liefcycleMixin(Vue) // 给Vue原型上添加一个_update方法
+
+export default Vue
+```
+
+
 
