--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -918,7 +918,7 @@ export function compileToFunction(template) {
 }
 ```
 
-### 生成render函数
+### 生成render函数1
 
 需要将ast语法树生成最终的render函数 就是字符串拼接（模板引擎），src/complier.index.js
 
@@ -971,6 +971,106 @@ export function compileToFunction(template) {
     }
 }
 ```
+
+### 生成render函数2
+
+3.处理孩子，src/complier.index.js
+
+```js
+import {parseHTML} from './parser-html'
+const defaultTagRE = /\{\{((?:.|\r?\n)+?)\}\}/g
+
+function genProps(attrs) { // 处理属性 拼接成属性的字符串
+    // [{name: 'id',value: 'app'},...]
+    let str = ''
+    for (let i = 0; i < attrs.length; i++) {
+        let attr = attrs[i];
+        if (attr.name === 'style') {
+            // style="color: red;fontSize:14px" => {style:{color: 'red'}}
+            let obj = {}
+            attr.value.split(';').forEach(item => {
+                let [key, value] = item.split(':')
+                obj[key] = value
+            })
+            attr.value = obj
+        }
+        str += `${attr.name}:${JSON.stringify(attr.value)},`
+    }
+    return `{${str.slice(0, -1)}}`
+}
+function genChildren(el) {
+    let children = el.children
+    if (children && children.length > 0) {
+        return `${children.map(c => gen(c)).join(',')}`
+    } else {
+        return false
+    }
+}
+function gen(node) {
+    if (node.type == 1) {
+        // 元素标签
+        return generate(node)
+    } else {
+        let text = node.text // a {{name}} b{{age}} c => _v("a"+_s(name)+"b"+_s(age)+"c")
+        let tokens = []
+        let match, index
+        let lastIndex = defaultTagRE.lastIndex = 0 // 只要是全局匹配 就需要将lastIndex每次匹配的时候调到0处
+        while (match = defaultTagRE.exec(text)) {
+            index = match.index
+            if (index > lastIndex) {
+                tokens.push(JSON.stringify(text.slice(lastIndex, index)))
+            }
+            tokens.push(`_s(${match[1].trim()})`)
+            lastIndex = index + match[0].length
+        }
+        if (lastIndex <text.length) {
+            tokens.push(JSON.stringify(text.slice(lastIndex)))
+        }
+        return `_v(${tokens.join('+')})`
+    }
+}
+function generate(el) {
+    let children = genChildren(el)
+    let code = `_c("${el.tag}",${
+        el.attrs.length ? genProps(el.attrs) : 'undefined'
+    }${
+        children ? `,${children}` : ''
+    })
+
+    `   
+    return code
+}
+
+export function compileToFunction(template) {
+    let root = parseHTML(template)
+    let code = generate(root)
+
+
+    // 核心思路：将模板转化成下面的字符串
+    // <div id="app"><p>hello {{name}}</p> hello</div>
+    // 将ast树 再次转化成js的语法
+    // _c("div",{id:app},_c("p",undefined,_v('hello' + _s(name))),_v('hello'))
+
+    // 所有的模板引擎实现 都需要new Function + with
+    let renderFn = new Function(`with(this){ return ${code} }`)
+    console.log(renderFn)
+    return renderFn
+}
+
+
+```
+
+正则的问题
+
+```js
+let reg = /a/g
+reg.test('abc') // true
+reg.test('abc') // false
+reg.lastIndex = 0
+reg.test('abc') // true
+```
+
+
 
 ## 创建渲染watcher
 
@@ -1040,6 +1140,16 @@ export function mountComponent(vm, el) {
 }
 ```
 
+定义Watcher类，src/observer/watcher.js
+
+```js
+class Watcher {
+
+}
+
+export default Watcher
+```
+
 将 vm.`_render`和vm.`_update`扩展到Vue原型上
 
 定义vm._render，src/render.js
@@ -1080,5 +1190,234 @@ liefcycleMixin(Vue) // 给Vue原型上添加一个_update方法
 export default Vue
 ```
 
+### 初次渲染
 
+- 生成虚拟dom
+- 生成真实DOM元素
+
+1.vm.`_render`()返回虚拟dom
+
+2.vm.`_update`(vm._render())通过虚拟dom创建真实的dom
+
+3.mountComponent执行会创建一个新的watcher实例，wacher实例初始化只做了一件事情vm.`_update`(vm.`_render`())进行组件初渲染。
+
+**定义`_render`及`_c`、`_v`、`_s`方法**
+
+```js
+// src/render.js
+import {
+    createElement,
+    createTextNode
+} from './vdom/create-element'
+export function renderMixin(Vue) {
+
+    Vue.prototype._c = function () {
+        return createElement(...arguments) // tag,data,children1,children2
+    }
+    Vue.prototype._v = function (text) {
+        return createTextNode(text)
+    }
+    Vue.prototype._s = function (val) {
+        return val == null ? '' : (typeof val === 'object' ? JSON.stringify(val) : val)
+    }
+
+    Vue.prototype._render = function () {
+        // _c 创建元素的虚拟节点
+        // _v 创建文本的虚拟节点
+        // _s JSON.stringify
+
+        const vm = this
+        const {
+            render
+        } = vm.$options
+        let vnode = render.call(vm) // 去实例上取值
+        return vnode
+    }
+}
+
+
+// src/vdom/create-element.js
+export function createElement(tag, data = {}, ...children) {
+    let key = data.key
+    if (key) {
+        delete data.key
+    }
+    return vnode(tag, data, key, children, undefined)
+
+}
+export function createTextNode(text) {
+    return vnode(undefined, undefined, undefined, undefined, text)
+}
+
+function vnode(tag, data, key, children, text) {
+    return {
+        tag,
+        data,
+        key,
+        children,
+        text
+    }
+}
+
+// 虚拟节点 就是通过 _c _v 实现用对象来描述dom的操作（对象）
+
+// 将tempalte转换成asts语法树 -> 生成render方法 -> 生成虚拟dom -> 真实dom
+// 重新生成虚拟dom -> 更新dom
+
+// {
+//     tag: 'div',
+//     key: undefined,
+//     data: {},
+//     children: [],
+//     text: undefined
+// }
+```
+
+**定义`_update`方法**，src/lifecycle.js
+
+```js
+import Watcher from './observer/watcher'
+import {patch} from './vdom/patch'
+export function liefcycleMixin(Vue) {
+    Vue.prototype._update = function (vnode) {
+        const vm = this
+        // 通过虚拟节点 渲染出真实的dom
+        vm.$el = patch(vm.$el, vnode) // 需要用虚拟节点创建出真实节点 替换掉 真实的$el
+    }
+}
+
+export function mountComponent(vm, el) {
+    const options = vm.$options // render
+    vm.$el = el // 真实的dom元素
+
+
+    // Watcher 就是用来渲染的
+    // vm._render 通过解析的render方法 渲染出虚拟dom _c _v _s
+    // vm._update 通过虚拟dom 创建真实的dom
+
+    // 渲染页面
+    let updateComponent = () => { // 无论是渲染还是更新都会调用此方法
+        // 返回的是虚拟dom
+        vm._update(vm._render())
+    }
+    // 渲染watcher 每个组件都有一个watcher
+    new Watcher(vm, updateComponent, ()=>{}, true) // true 表示它是一个渲染watcher
+}
+```
+
+**定义patch方法**，src/vdom/patch.js
+
+```js
+export function patch(oldVnode, vnode) {
+    // 1.判断是更新还是渲染
+    const isRealElement = oldVnode.nodeType
+    if (isRealElement) {
+        const oldElm = oldVnode // div id="app"
+        const parentElm = oldElm.parentNode // body
+
+        let el = createElm(vnode)
+        parentElm.insertBefore(el, oldElm.nextSibling)
+
+        parentElm.removeChild(oldElm)
+    }
+    // 递归创建真实节点 替换掉老的节点
+}
+
+function createElm(vnode) { // 根据虚拟节点创建真实的节点
+    let {tag,children,key,data,text} =vnode
+    // 是标签就创建标签
+    if (typeof tag === 'string') {
+        vnode.el = document.createElement(tag)
+        updateProperties(vnode)
+        children.forEach(child => { // 递归创建儿子节点，将儿子节点扔到父节点中
+            return vnode.el.appendChild(createElm(child))
+        })
+    } else {
+        // 如果不是标签就是文本
+        // 虚拟dom上映射着真实dom 方便后续更新操作
+        vnode.el = document.createTextNode(text)
+    }
+    return vnode.el
+}
+// 更新属性
+function updateProperties(vnode) {
+    let newProps = vnode.data
+    let el = vnode.el
+    for (let key in newProps) {
+        if (key === 'style') {
+            for (let styleName in newProps.style) {
+                el.style[styleName] = newProps.style[styleName]
+            }
+        } else if (key === 'class') {
+            el.className = newProps.class
+        } else {
+            el.setAttribute(key, newProps[key])
+        }
+    }
+}
+```
+
+**定义Watcher类**，src/observer/watcher.js
+
+```js
+class Watcher {
+    constructor (vm, exprOrFn, callback, options) {
+        this.vm = vm
+        this.exprOrFn = exprOrFn
+        this.options = options
+
+        this.getter = exprOrFn // 将内部传过来的回调函数 放到getter属性上
+
+        this.get()
+    }
+    get(){
+        this.getter()
+    }
+}
+
+export default Watcher
+```
+
+**示例模板**
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div id="app" style="color: red;background:blue">
+        <p>{{name}}</p>
+        <p>{{age}}</p>
+        <ul>
+            <li>{{name}}</li>
+            <li>age</li>
+        </ul>
+    </div>
+    <div>other dom</div>
+    <script src="./dist/umd/vue.js"></script>
+    <script>
+        let vm = new Vue({
+            el: '#app',
+            data() {
+                return {
+                    name: 'zhangsan',
+                    age: 11
+                }
+            },
+            computed() {},
+            watch() {}
+        })
+        // vm.name => vm._data.name
+        console.log(vm.name)
+    </script>
+</body>
+
+</html>
+```
 
