--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -1758,3 +1758,145 @@ export function callHook(vm, hook) {
 </html>
 ```
 
+## 依赖收集
+
+### 对象的依赖收集
+
+组件挂载时执行mountComponent方法，创建一个渲染watcher实例，渲染watcher初始化时会将自己存入dep，中，并将Dep.target赋值为最新的watcher实例。
+
+初始化数据时，对数据进行响应式处理时，在get(){}方法中添加依赖收集，set(){}方法中，添加更新渲染程序。
+
+组件初始化时，由于Dep.target不会进行依赖收集。当组件渲染后，Dep.target有值，当取值就会进行依赖收集渲染wacher，赋值会将存起来的渲染watcher执行，更新组件。
+
+**定义Dep类，src/observer.dep.js**
+
+用于存储渲染watcher，并把当前渲染wacher存储在Dep.target上。
+
+```js
+let id = 0
+class Dep {
+    constructor () {
+        this.id = id++
+        this.subs = [] // age: [watcher, watcher]
+    }
+    depend(){
+        this.subs.push(Dep.target) // 观察者模式
+    }
+    notify(){
+        this.subs.forEach(watcher => watcher.update())
+    }
+}
+
+let stack = []
+// 目前可以做到 将watcher保留起来 和 移除的功能
+export function pushTarget(watcher) {
+    Dep.target = watcher
+    stack.push(watcher)
+}
+
+export function popTarget(watcher) {
+    stack.pop()
+    Dep.target = stack[stack.length - 1]
+}
+
+export default Dep
+```
+
+**组件渲染，创建一个渲染watcher实例，渲染watcher初始化时将自己暂存起来。src/observer/watcher.js**
+
+```js
+import {pushTarget, popTarget} from './dep.js'
+let id = 0
+class Watcher {
+    constructor (vm, exprOrFn, callback, options) {
+        this.vm = vm
+        this.exprOrFn = exprOrFn
+        this.options = options
+        this.id = id++
+
+        this.getter = exprOrFn // 将内部传过来的回调函数 放到getter属性上
+
+        this.get() // 调用get方法 会让渲染watcher执行
+    }
+    get(){
+        pushTarget(this) // 把watcher存起来 Dep.target
+        this.getter() // 渲染watcher执行
+        popTarget() // 移除watcher
+    }
+    update(){
+        this.get()
+    }
+}
+
+export default Watcher
+```
+
+**响应式处理时添加依赖收集及执行机制，src/observer/index.js**
+
+```js
+function defineReactive(data, key, value) {
+    let dep = new Dep()
+    observe(value)
+    Object.defineProperty(data, key, {
+        configurable: true,
+        enumerable: true,
+        get() {
+            console.log('取值') // 每个属性都对应着自己的watcher
+            if (Dep.target) { // 如果当前有watcher
+                dep.depend() // 意味着我要将watcher存起来
+            }
+            return value
+        },
+        set(newValue) { // 设置值时也可以做一些操作
+            console.log('更新')
+            if (newValue === value) return
+            observe(newValue)
+            value = newValue
+            dep.notify() // 通知依赖的watcher来进行一个更新操作
+        }
+    })
+}
+```
+
+测试
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div id="app" style="color: red;background:blue">
+        <p>{{age}}</p>
+    </div>
+    <div>other dom</div>
+    <script src="./dist/umd/vue.js"></script>
+    <script>
+        let vm = new Vue({
+            el: '#app',
+            data() {
+                return {
+                    name: 'zhangsan',
+                    age: {age: 100},
+                }
+            },
+        })
+
+        setTimeout(() => {
+            vm.age = 1000 // 依赖收集
+            // vm._update(vm._render())
+            // 希望数据变化可以自动的重新执行我们的渲染watcher
+        }, 1000);
+    </script>
+</body>
+
+</html>
+```
+
+
+
