--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -1760,6 +1760,10 @@ export function callHook(vm, hook) {
 
 ## 依赖收集
 
+- 在渲染时存储watcher
+- 对象依赖收集
+- 数组的依赖收集
+
 ### 对象的依赖收集
 
 组件挂载时执行mountComponent方法，创建一个渲染watcher实例，渲染watcher初始化时会将自己存入dep，中，并将Dep.target赋值为最新的watcher实例。
@@ -1897,6 +1901,82 @@ function defineReactive(data, key, value) {
 
 </html>
 ```
+
+### 解决watcher重复存放问题
+
+watcher 和 dep 的关系：一个watcher对应n个dep，一个dep对应n个watcher => 多对多
+
+ watcher 里不能放重复的dep dep里不能放重复的watcher
+
+```js
+// src/observer/watcher.js
+import {pushTarget, popTarget} from './dep.js'
+let id = 0
+class Watcher {
+    constructor (vm, exprOrFn, callback, options) {
+        this.vm = vm
+        this.exprOrFn = exprOrFn
+        this.options = options
+        this.id = id++
+        this.getter = exprOrFn
+        this.depsId = new Set() // es6中的集合（不能放重复项）
+        this.deps= []
+        this.get()
+    }
+    addDep(dep){ // watcher 里不能放重复的dep dep里不能放重复的watcher
+        let id = dep.id
+        if (!this.depsId.has(id)) {
+            this.depsId.add(id)
+            this.deps.push(dep)
+            dep.addSub(this)
+        }
+    }
+    get(){
+        pushTarget(this) // 把watcher存起来 Dep.target
+        this.getter() // 渲染watcher执行
+        popTarget() // 移除watcher
+    }
+    update(){
+        this.get()
+    }
+}
+
+export default Watcher
+
+// src/observer/dep.js
+let id = 0
+class Dep {
+    constructor() {
+        this.id = id++
+        this.subs = [] // age: [watcher, watcher]
+    }
+    addSub(watcher) {
+        this.subs.push(watcher) // 观察者模式
+    }
+    depend() {
+        // 让这个watcher 记住当前的dep，如果watcher没存过Dep，dep肯定不能存watcher
+        Dep.target.addDep(this)
+    }
+    notify() {
+        this.subs.forEach(watcher => watcher.update())
+    }
+}
+
+let stack = []
+export function pushTarget(watcher) {
+    Dep.target = watcher
+    stack.push(watcher)
+}
+
+export function popTarget(watcher) {
+    stack.pop()
+    Dep.target = stack[stack.length - 1]
+}
+
+export default Dep
+```
+
+
 
 
 
