--- a/docs/vue/2020-vue.md
+++ b/docs/vue/2020-vue.md
@@ -1976,7 +1976,327 @@ export function popTarget(watcher) {
 export default Dep
 ```
 
+### 数组的依赖收集
 
+```js
+// src/observer/index.js
+import {
+    arrayMethods
+
+} from './array.js'
+import {
+    isObject,
+    def
+} from '../util/index'
+import Dep from './dep.js'
+
+class Observer {
+    constructor(value) {
+        this.dep = new Dep // 给数组用的
+        def(value, '__ob__', this)
+
+        if (Array.isArray(value)) {
+            value.__proto__ = arrayMethods
+            this.observerArray(value) // 这里虽然递归了 但是没有依赖收集
+        } else {
+            this.walk(value)
+        }
+    }
+    observerArray(value) {
+        value.forEach(item => {
+            observe(item)
+        })
+    }
+    walk(data) {
+        let keys = Object.keys(data)
+        keys.forEach(key => {
+            defineReactive(data, key, data[key])
+        })
+    }
+}
+
+function defineReactive(data, key, value) {
+    let dep = new Dep() // 这个dep 是为了给对象使用的
+
+    // 这里的value可能是数组 也可能是对象，返回的结果是observer的实例，当前这个value对象的observer
+    let childOb = observe(value)
+    Object.defineProperty(data, key, {
+        configurable: true,
+        enumerable: true,
+        get() {
+            if (Dep.target) { 
+                dep.depend() 
+                if (childOb) {
+                    console.log(childOb) // 数组的依赖收集
+                    childOb.dep.depend() // 收集数组的依赖
+
+                    // 如果数组中还有数组
+                    if (Array.isArray(value)) {
+                        dependArray(value)
+                    }
+                }
+            }
+            return value
+        },
+        set(newValue) { // 设置值时也可以做一些操作
+            // console.log('更新')
+            if (newValue === value) return
+            observe(newValue) // 继续劫持用户设置的值，因为有可能用户设置的值是一个对象
+            value = newValue
+            dep.notify() // 通知依赖的watcher来进行一个更新操作
+        }
+    })
+
+}
+
+function dependArray(value) {
+    for (let i = 0; i < value.length; i++) {
+        let current = value[i]; // 将数组中的每一个都取出来，数据变化后 也去更新视图
+        // 数组中的数组的依赖收集
+        current.__ob__ && current.__ob__.dep.depend()
+        if (Array.isArray(current)) {
+            dependArray(current)
+        }
+    }
+}
+
+export function observe(data) {
+    let isObj = isObject(data)
+    if (!isObj) return
+
+    return new Observer(data)
+
+}
+
+// src/observer/array.js
+
+let oldArrayMethods = Array.prototype
+export let arrayMethods = Object.create(oldArrayMethods)
+const methods = ['push','shift','unshift','pop','sort','splice','reverse']
+
+methods.forEach(method => {
+    arrayMethods[method] = function (...args) {
+        const result = oldArrayMethods[method].apply(this, args) 
+        let inserted
+        let ob = this.__ob__
+        switch (method) {
+            case 'push':
+            case 'unshift':
+                inserted = args
+                break;
+            case 'splice':
+                inserted = args.slice(2)
+            default:
+                break;
+        }
+        if (inserted) ob.observerArray(inserted)
+
+        ob.dep.notify() // 如果用户调用了 上述方法 我会通知当前这个dep去更新
+        return result
+    }
+})
+```
+
+测试
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <!-- watcher 和 dep 的关系：一个watcher对应n个dep，一个dep对应n个watcher => 多对多 -->
+    <div id="app" style="color: red;background:blue">
+        <p>{{arr}}</p>
+    </div>
+    <div>other dom</div>
+    <script src="./dist/umd/vue.js"></script>
+    <script>
+        let vm = new Vue({
+            el: '#app',
+            data() {
+                return {
+                    arr: [[1,2,3]]
+                }
+            },
+        })
+
+        setTimeout(() => {
+            // vm.arr.push(4,5,6)
+            vm.arr[0].push(4,5,6)
+            // vm._update(vm._render())
+            // 希望数据变化可以自动的重新执行我们的渲染watcher
+        }, 1000);
+    </script>
+</body>
+
+</html>
+```
+
+## 实现Vue异步更新之nextTick
+
+- 实现队列机制
+- nextTick实现原理
+
+当我们更新数据后，vue执行update方法执行渲染watcher，渲染组件。我们希望能拿到更新后的数据。
+
+测试
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <!-- watcher 和 dep 的关系：一个watcher对应n个dep，一个dep对应n个watcher => 多对多 -->
+    <div id="app" style="color: red;background:blue">
+        <p>{{arr}}</p>
+    </div>
+    <div>other dom</div>
+    <script src="./dist/umd/vue.js"></script>
+    <script>
+        let vm = new Vue({
+            el: '#app',
+            data() {
+                return {
+                    arr: [[1,2,3]]
+                }
+            },
+        })
+
+        setTimeout(() => {
+            vm.arr.push(1)
+            vm.arr.push(2)
+            vm.arr.push(3)
+            vm.arr.push(4)
+            vm.$nextTick(()=>{
+                console.log(vm.$el.innerHTML)
+            })
+        }, 1000);
+    </script>
+</body>
+
+</html>
+```
+
+**注册nextTick，src/init.js**
+
+```js
+import {nextTick} from './util/next-tick'
+export function initMixin(Vue) {
+    //...
+    Vue.prototype.$nextTick = nextTick // 注册nextTick
+}
+```
+
+**定义nextTick，src/util/next-tick.js**
+
+调用nextTick时，现价回调函数暂存起来，等同步代码执行完后在执行。
+
+```js
+let callbacks = []
+// [flushSchedularQueue,userNextTick]
+
+let waiting  = false
+function flushCallback() {
+    callbacks.forEach(cb=>cb())
+    waiting = false
+    callbacks = []
+}
+export function nextTick(cb) {
+    // 多次调用nextTick 如果没有刷新的时候 就先把他放到数组中，
+    // 刷新后 更改waiting
+    callbacks.push(cb)
+    if (waiting === false) {
+        setTimeout(flushCallback, 0)
+        waiting = true
+    }
+}
+```
+
+组件更新时，渲染watcher通过队列控制成一起更新，src/observer/watcher.js
+
+```js
+import {pushTarget, popTarget} from './dep.js'
+import {queueWatcher} from './schedular'
+let id = 0
+class Watcher {
+    constructor (vm, exprOrFn, callback, options) {
+        this.vm = vm
+        this.exprOrFn = exprOrFn
+        this.options = options
+        this.id = id++
+        this.getter = exprOrFn
+        this.depsId = new Set()
+        this.deps= []
+        this.get()
+    }
+    addDep(dep){
+        let id = dep.id
+        if (!this.depsId.has(id)) {
+            this.depsId.add(id)
+            this.deps.push(dep)
+            dep.addSub(this)
+        }
+    }
+    get(){
+        pushTarget(this)
+        this.getter()
+        popTarget()
+    }
+    update(){
+        // 等待着 一起更新 因为每次掉色update时 都放入了watcher
+        queueWatcher(this)
+
+        // this.get()
+    }
+    run(){
+        this.get()
+    }
+}
+
+export default Watcher
+```
+
+**通过队列结合nextTick实现异步更新，src/observer/schedular.js**
+
+```js
+let queue = []
+let has = {}
+import {
+    nextTick
+} from '../util/next-tick'
+
+function flushSchedularQueue() {
+    queue.forEach(watcher => watcher.run())
+    queue = [] // 让下一次可以继续使用
+    has = {}
+}
+export function queueWatcher(watcher) {
+    const id = watcher.id
+    if (has[id] == null) {
+        queue.push(watcher)
+        has[id] = true
+
+        // 宏任务和微任务（Vue里面使用Vue.nextTick）
+        // Vue.nextTick = promise / mutationObserver / setImmediate / setTimeout
+
+        nextTick(flushSchedularQueue)
+    }
+}
+```
+
+## 组件渲染流程
 
 
 
